force-app/main/default/objects/Client__c/Client__c.object-meta.xml
<CustomObject>
    <label>Client</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>ClientId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>