force-app/main/default/objects/Client__c/fields/Secret_Answer__c.field-meta.xml
<CustomField>
    <fullName>Secret_Answer__c</fullName>
    <label>Secret Answer</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>