force-app/main/default/objects/Client__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <label>Secret Question</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In what city were you born?</fullName>
            </value>
            <value>
                <fullName>What is the name of your favorite pet?</fullName>
            </value>
            <value>
                <fullName>What is your mother&apos;s maiden name?</fullName>
            </value>
            <value>
                <fullName>What high school did you attend?</fullName>
            </value>
            <value>
                <fullName>What was the name of your elementary school?</fullName>
            </value>
            <value>
                <fullName>What was the make of your first car?</fullName>
            </value>
            <value>
                <fullName>What was your favorite food as a child?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>